
2008-07-30

   * Close Buttons for all Tabs
   * Switched to DockingFrames 1.0.6 preview 3
   * Added Shortcut (F5) to insert current ISO-date.

2008-06-23

   * Better parsing of value strings.

2008-06-10

   * Improved perspective management
   * Added possibility to directly choose the Code for which details should be shown 

2008-06-03

   * F4 as short cut for formatting codes
   * Code Detail View for looking at the description of codes
   * ProgressBar on Saving

2008-06-02

   * Trails can now be executed on the current project to restore lost work.

2008-05-24

   * Improved refetching operations
   * Statistical information export 

2008-05-20

   * Fixed issue regarding empty codes still showing up in filter results for '*'
   * The - operator now filters only primary documents in which the code is 
     contained in all segments of a code

2008-05-19

   * Added logging of editing activities (called trail logging)
   * Fixed bug related to storing of Visualization Presets
   * Fixed bug making it impossible to use an empty filter in Visualization
   * Improved renaming of codes now does not affect description of codes
   * Improved removal of codes in case of codes having a description
   * Added command line options:
      * --notrail: disable trail logging
      * [file to open] Open the given file

2008-05-14

   * Fixed bug in ResetView of Visualization that was not centering the view correctly.
   * Improved color highlighting in document tree.

2008-05-12

   * Better timeline information in visualization and a zoomable grid for days and months
   * Improvements regarding back and forward in views, now better in corporates filters
   * Started implementation for coding codes
   * Fixed resize problem with CodeBox.
   * Restricted '*' while filtering to all PDs and not the mailing-lists
   * Fixed bug in ordering code
   * Generified VariableProxy
   * Saving of project file removes empty codings