@@ -1,4 +1,8 @@
 
+2008-07-31
+
+   * Improved performance of Content assist for CodeBox.
+
 2008-07-30
 
    * Close Buttons for all Tabs
